tests/ui/rust-2024/unsafe-attributes/unsafe-attributes-fix.stderr
error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:40:6
   |
LL | tt!([no_mangle]);
   |      ^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
note: the lint level is defined here
  --> $DIR/unsafe-attributes-fix.rs:3:9
   |
LL | #![deny(unsafe_attr_outside_unsafe)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
help: wrap the attribute in `unsafe(...)`
   |
LL | tt!([unsafe(no_mangle)]);
   |      +++++++         +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:43:8
   |
LL | ident!(no_mangle);
   |        ^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
help: wrap the attribute in `unsafe(...)`
   |
LL |         #[unsafe($e)]
   |           +++++++  +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:46:7
   |
LL | meta!(no_mangle);
   |       ^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
help: wrap the attribute in `unsafe(...)`
   |
LL | meta!(unsafe(no_mangle));
   |       +++++++         +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:49:8
   |
LL | meta2!(export_name = "baw");
   |        ^^^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
help: wrap the attribute in `unsafe(...)`
   |
LL | meta2!(unsafe(export_name = "baw"));
   |        +++++++                   +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:52:9
   |
LL | ident2!(export_name, "bars");
   |         ^^^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
help: wrap the attribute in `unsafe(...)`
   |
LL |         #[unsafe($e = $l)]
   |           +++++++       +

error: unsafe attribute used without unsafe
  --> $DIR/unsafe-attributes-fix.rs:56:3
   |
LL | #[no_mangle]
   |   ^^^^^^^^^ usage of unsafe attribute
   |
   = warning: this is accepted in the current edition (Rust 2015) but is a hard error in Rust 2024!
   = note: for more information, see issue #123757 <https://github.com/rust-lang/rust/issues/123757>
help: wrap the attribute in `unsafe(...)`
   |
LL | #[unsafe(no_mangle)]
   |   +++++++         +

error: aborting due to 6 previous errors

